--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://softwarecraftsmen.github.com/wearesoftwarecraftsmen
+url: http://softwarecraftsmen.github.com
 title: We are Software Craftsmen
 subtitle: 
 author: Andrew Smith
