Added Google plus user ID instead of account name.

--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ google_plus_one_size: medium
 
 # Google Plus Profile
 # Hidden: No visible button, just add author information to search results
-googleplus_user: andrew.softwarecraftsman@gmail.com
+googleplus_user: 101345975897161918424
 googleplus_hidden: false
 
 # Pinboard
