--- a/_config.yml
+++ b/_config.yml
@@ -98,5 +98,5 @@ google_analytics_tracking_id: UA-37138786-1
 # Facebook Like
 facebook_like: true
 
-bitbucket_user: softwarecraftsmen
+bitbucket_user: wearesoftwarecraftsmen
 bitbucket_repo_count: 5
