Updated the config to match my custom domain and not the github pages one.

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://softwarecraftsmen.github.com
+url: http://wearesoftwarecraftsmen.com
 title: We are Software Craftsmen
 subtitle: 
 author: Andrew Smith
