--- a/_config.yml
+++ b/_config.yml
@@ -49,9 +49,9 @@ default_asides: [custom/asides/about.html, custom/asides/related_posts.html, asi
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
-# blog_index_asides:
-# post_asides:
-# page_asides:
+blog_index_asides: [custom/asides/about.html, asides/recent_posts.html, custom/asides/tag_cloud.html, asides/twitter.html]
+post_asides: [custom/asides/about.html, custom/asides/related_posts.html, asides/recent_posts.html, custom/asides/tag_cloud.html, asides/twitter.html, asides/github.html, asides/bitbucket.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
+page_asides: [asides/twitter.html, asides/github.html, asides/bitbucket.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
 
 # ----------------------- #
 #   3rd Party Settings    #
